# game-match

./: CMakeLists.txt  readme.md
database/: CMakeLists.txt
database/src/: CMakeLists.txt  database.cpp
game/src/: client.py
game/src/match_client/match/: Match-remote
match_system/: CMakeLists.txt
match_system/src/: match_system.cpp
match_system/src/match_server/: Match_server.skeleton.cpp.bk
match_system/src/save_client/: Save.h  Save_server.skeleton.cpp.bk
match_sysytem/src/: main  main.cpp
thrift/: match.thrift  save.thrift
